# design/design.go
@@ -27,6 +27,14 @@ var _ = Resource("bottle", func() {
 	})
 })
 
+var _ = Resource("swagger", func() {
+	Origin("*", func() {
+		Methods("GET") // Allow all origins to retrieve the Swagger JSON (CORS)
+	})
+	Files("/swagger.json", "swagger/swagger.json")
+	Files("/swaggerui/*filepath", "swaggerui/dist")
+})
+
 var BottleMedia = MediaType("application/vnd.goa.example.com+json", func() {
 	Description("A bottle of wine")
 	Attributes(func() {
